[tool.poetry]
name = "misterdiscord"
version = "0.1.0"
description = ""
authors = ["Ian Benedict <Duelist@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^2.10.1"
pypresence = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
